05-security/02-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: demo-api-policy
  namespace: demo-api
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["demo-app"]
    to:
    - operation:
        methods: ["GET"]
